<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anshu.bitebuddy.ui.fragments.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/linear_layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorSize="64dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/grid_1"
        android:visibility="gone"
        tools:visibility="visible">


        <!-- Profile Image -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="500dp">

            <ImageView
                android:id="@+id/image_view_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:scaleType="center"
                tools:src="@tools:sample/avatars" />
        </com.google.android.material.card.MaterialCardView>

        <!-- Profile Email -->
        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="user name" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/grid_1"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="user@example.com" />

        <!-- Phone Number Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_email"
            android:layout_marginTop="@dimen/grid_1"
            android:hint="@string/phone_number"
            app:endIconDrawable="@drawable/baseline_edit_24"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/outline_phone_in_talk_24">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingEnd="40dp"
                android:textColor="@color/black"
                tools:text="+1 (555) 123-4567" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Address Field -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/saved_address_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_layout"
            android:layout_marginTop="@dimen/grid_1"
            android:padding="@dimen/grid_1"
            android:text="@string/saved_address"
            app:cornerRadius="@dimen/grid_1" />

        <!-- Logout Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="32dp"
            android:padding="@dimen/grid_2"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="@dimen/grid_1" />

    </RelativeLayout>
</RelativeLayout>